kubernetes/create-order-consumer.yaml
apiVersion: v1
kind: Service
metadata:
  name: last-bite-create-order-consumer-service
spec:
  selector:
    app: last-bite-create-order-consumer
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: last-bite-create-order-consumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: last-bite-create-order-consumer
  template:
    metadata:
      labels:
        app: last-bite-create-order-consumer
    spec:
      containers:
        - name: last-bite-create-order-consumer-api 
          image: whdgnszz1/last-bite-create-order-consumer:latest
          readinessProbe:
            httpGet: 
              path: /main
              port: 8003
          livenessProbe: 
            httpGet:
              path: /main
              port: 8003
            initialDelaySeconds: 7
            timeoutSeconds: 3        
            periodSeconds: 10        
            failureThreshold: 3  
          resources:
            requests:
              memory: 100Mi
              cpu: 70m
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
