kubernetes/last-bite.yaml
apiVersion: v1
kind: Service
metadata:
  name: last-bite-service
spec:
  selector:
    app: last-bite
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: last-bite-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: last-bite
  template:
    metadata:
      labels:
        app: last-bite
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'  
    spec:
      containers:
        - name: last-bite-api
          image: whdgnszz1/last-bite-backend:latest
          readinessProbe:
            httpGet: 
              path: /
              port: 8000
          resources:
            requests:
              memory: 700Mi
              cpu: 100m
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
