kubernetes/update-item-consumer.yaml
apiVersion: v1
kind: Service
metadata:
  name: last-bite-update-item-consumer-service
spec:
  selector:
    app: last-bite-update-item-consumer
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: last-bite-update-item-consumer-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: last-bite-update-item-consumer
  template:
    metadata:
      labels:
        app: last-bite-update-item-consumer
    spec:
      containers:
        - name: last-bite-update-item-consumer-api 
          image: whdgnszz1/last-bite-update-item-consumer:latest
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
